plp gape overflow bug has been fixed

--- a/assets/template-collection-grid.css
+++ b/assets/template-collection-grid.css
@@ -39,7 +39,6 @@
 }
 
 .filter-group-display__list li {
-  padding: 1rem 5.1rem;
   cursor: pointer;
 }
 
